Enhance Zendure integration: add new configuration options and improve code structure

--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -17,9 +17,13 @@
           "username": "Zendure Username",
           "password": "Zendure Password",
           "broker": "Local MQTT broker",
+          "p1meter": "P1 Sensor for smart matching",
+          "power": "Sensor for manual operation",
           "consumed": "Sensor for consumed energy",
           "produced": "Sensor for produced energy",
-          "power": "Sensor for manual/single sensor matching"
+          "phase1": "Maximum output for phase 1",
+          "phase2": "Maximum output for phase 2",
+          "phase3": "Maximum output for phase 3"
         }
       },
       "reconfigure": {
@@ -28,9 +32,13 @@
           "username": "Zendure Username",
           "password": "Zendure Password",
           "broker": "Local MQTT broker",
+          "p1meter": "P1 Sensor for smart matching",
+          "power": "Sensor for manual operation",
           "consumed": "Sensor for consumed energy",
           "produced": "Sensor for produced energy",
-          "power": "Sensor for manual/single sensor matching"
+          "phase1": "Maximum output for phase 1",
+          "phase2": "Maximum output for phase 2",
+          "phase3": "Maximum output for phase 3"
         }
       }
     }
