--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -2,35 +2,35 @@
   "config": {
     "title": "Zendure Integration",
     "abort": {
-      "already_configured": "Device is already configured",
-      "reconfigure_successful": "Reconfiguration successful"
+      "already_configured": "Gerät ist bereits konfiguriert",
+      "reconfigure_successful": "Neukonfiguration erfolgreich"
     },
     "error": {
-      "cannot_connect": "Failed to connect",
-      "invalid_auth": "Invalid authentication",
-      "unknown": "Unexpected error"
+      "cannot_connect": "Verbindung fehlgeschlagen",
+      "invalid_auth": "Ungültige Authentifizierung",
+      "unknown": "Unerwarteter Fehler"
     },
     "step": {
       "user": {
         "data": {
-          "username": "Zendure Username",
-          "password": "Zendure Password",
-          "broker": "Local MQTT broker",
-          "p1meter": "P1 Sensor for smart matching",
-          "phase1": "Maximum output for phase 1",
-          "phase2": "Maximum output for phase 2",
-          "phase3": "Maximum output for phase 3"
+          "username": "Zendure Benutzername",
+          "password": "Zendure Passwort",
+          "broker": "Lokaler MQTT Broker",
+          "p1meter": "P1 Sensor für Smart Matching",
+          "phase1": "MMaximale Ausgabe für Phase 1",
+          "phase2": "Maximale Ausgabe für Phase 2",
+          "phase3": "Maximale Ausgabe für Phase 3"
         }
       },
       "reconfigure": {
         "data": {
-          "username": "Zendure Username",
-          "password": "Zendure Password",
-          "broker": "Local MQTT broker",
-          "p1meter": "P1 Sensor for smart matching",
-          "phase1": "Maximum output for phase 1",
-          "phase2": "Maximum output for phase 2",
-          "phase3": "Maximum output for phase 3"
+          "username": "Zendure Benutzername",
+          "password": "Zendure Passwort",
+          "broker": "Lokaler MQTT Broker",
+          "p1meter": "P1 Sensor für Smart Matching",
+          "phase1": "Maximale Ausgabe für Phase 1",
+          "phase2": "Maximale Ausgabe für Phase 2",
+          "phase3": "Maximale Ausgabe für Phase 3"
         }
       }
     }
@@ -39,10 +39,10 @@
     "step": {
       "init": {
         "data": {
-          "scan_interval": "Scan Interval (seconds)"
+          "scan_interval": "Scan Intervall in Sekunden"
         },
-        "description": "Amend your options.",
-        "title": "Zendure Integration Options"
+        "description": "Optionen anpassen",
+        "title": "Zendure Integrationsoptionen"
       }
     }
   },
