--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -56,20 +56,8 @@
       }
     },
     "number": {
-      "inputLimit": {
-        "name": "Limit Input"
-      },
-      "outputLimit": {
-        "name": "Limit Output"
-      },
       "manual_power": {
         "name": "Manual Power"
-      },
-      "minSoc": {
-        "name": "SOC Minimum"
-      },
-      "socSet": {
-        "name": "SOC Maximum"
       }
     },
     "sensor": {
@@ -77,30 +65,30 @@
         "name": "Ambient light color"
       },
       "autoModel": {
-        "name": "Battery Program",
+        "name": "Batterij Programma",
         "state": {
-          "0": "None",
-          "6": "Battery priority mode",
+          "0": "Geen",
+          "6": "Batterij priority mode",
           "7": "Appointment mode",
           "8": "Smart Matching Mode",
           "9": "Smart CT mode",
           "10": "Electricity Price"
         }
       },
-      "packNum": {
-        "name": "Battery Count"
-      },
       "batVolt": {
-        "name": "Battery Voltage"
+        "name": "Batterij Voltage"
       },
       "hubState": {
         "name": "Hub State"
       },
       "electricLevel": {
-        "name": "Battery"
+        "name": "Batterij"
+      },
+      "inputLimit": {
+        "name": "Input Limit"
       },
       "chargingMode": {
-        "name": "Charging Mode",
+        "name": "Laad Mode",
         "state": {
           "0": "Nothing",
           "1": "mode 1",
@@ -108,7 +96,7 @@
         }
       },
       "chargingType": {
-        "name": "Charging Type",
+        "name": "Laad Type",
         "state": {
           "0": "Type 0",
           "1": "Type 1",
@@ -116,31 +104,31 @@
         }
       },
       "chargingTime": {
-        "name": "Charging Time"
+        "name": "Laad Tijd"
       },
       "packState": {
-        "name": "Battery State",
+        "name": "Batterij Status",
         "state": {
-          "0": "Sleeping",
-          "1": "Charging",
-          "2": "Discharging"
+          "0": "Idle",
+          "1": "Laden",
+          "2": "Ontladen"
         }
       },
       "packInputPower": {
-        "name": "Battery Output"
+        "name": "Batterij Output"
       },
       "outputPackPower": {
-        "name": "Battery Input"
+        "name": "Batterij Input"
       },
       "hyperTmp": {
-        "name": "Battery Temperature"
+        "name": "Batterij Temperature"
       },
       "strength": {
         "name": "Wifi Signal Strength"
       }
     },
     "select": {
-      "Operation": {
+      "operation": {
         "name": "Operation Mode",
         "state": {
           "off": "Off",
