--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -15,10 +15,7 @@
           "username": "Zendure Benutzername",
           "password": "Zendure Passwort",
           "broker": "Lokaler MQTT Broker",
-          "p1meter": "P1 Sensor für Smart Matching",
-          "phase1": "Maximale Ausgabe für Phase 1",
-          "phase2": "Maximale Ausgabe für Phase 2",
-          "phase3": "Maximale Ausgabe für Phase 3"
+          "p1meter": "P1 Sensor für Smart Matching"
         }
       },
       "reconfigure": {
@@ -26,10 +23,7 @@
           "username": "Zendure Benutzername",
           "password": "Zendure Passwort",
           "broker": "Lokaler MQTT Broker",
-          "p1meter": "P1 Sensor für Smart Matching",
-          "phase1": "Maximale Ausgabe für Phase 1",
-          "phase2": "Maximale Ausgabe für Phase 2",
-          "phase3": "Maximale Ausgabe für Phase 3"
+          "p1meter": "P1 Sensor für Smart Matching"
         }
       }
     }
