--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -15,10 +15,7 @@
           "username": "Zendure Username",
           "password": "Zendure Password",
           "broker": "Local MQTT broker",
-          "p1meter": "P1 Sensor for smart matching",
-          "phase1": "Maximum output for phase 1",
-          "phase2": "Maximum output for phase 2",
-          "phase3": "Maximum output for phase 3"
+          "p1meter": "P1 Sensor for smart matching"
         }
       },
       "reconfigure": {
@@ -26,10 +23,7 @@
           "username": "Zendure Username",
           "password": "Zendure Password",
           "broker": "Local MQTT broker",
-          "p1meter": "P1 Sensor for smart matching",
-          "phase1": "Maximum output for phase 1",
-          "phase2": "Maximum output for phase 2",
-          "phase3": "Maximum output for phase 3"
+          "p1meter": "P1 Sensor for smart matching"
         }
       }
     }
@@ -139,19 +133,29 @@
       }
     },
     "select": {
+      "ac_mode": {
+        "name": "AC Operation Mode",
+        "state": {
+          "input": "AC Input mode",
+          "output": "AC output mode"
+        }
+      },
+      "cluster": {
+        "name": "Device cluster",
+        "state": {
+          "clusterunknown": "Unknown cluster configuration, please check!!",
+          "clusterowncircuit": "Device has its own circuit or phase",
+          "cluster800": "Cluster max. 800w",
+          "cluster1200": "Cluster max. 1200w",
+          "cluster2400": "Cluster max. 2400w"
+        }
+      },
       "operation": {
         "name": "Operation Mode",
         "state": {
           "off": "Off",
           "manual": "Manual Power",
           "smart": "Smart Matching"
-        }
-      },
-      "ac_mode": {
-        "name": "AC Operation Mode",
-        "state": {
-          "input": "AC Input mode",
-          "output": "AC output mode"
         }
       }
     },
