--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -149,13 +149,13 @@
         }
       },
       "cluster": {
-        "name": "Device cluster",
+        "name": "Gerätecluster",
         "state": {
-          "clusterunknown": "Unknown cluster configuration, please check!!",
-          "clusterowncircuit": "Device has its own circuit or phase",
-          "cluster800": "Cluster max. 800w",
-          "cluster1200": "Cluster max. 1200w",
-          "cluster2400": "Cluster max. 2400w"
+          "clusterunknown": "Unbekannte Clusterkonfiguration, bitte prüfen!!",
+          "clusterowncircuit": "Gerät hat einen eigenen Stromkreis oder eine eigene Phase",
+          "cluster800": "Cluster max. 800 W",
+          "cluster1200": "Cluster max. 1200 W",
+          "cluster2400": "Cluster max. 2400 W"
         }
       }
     },
